--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -14,77 +14,17 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Chain Overview" />
+        android:text="Chain Overview" 
+        />
     
-    <TableLayout 
+    <Button 
+		        android:id="@+id/main_btn_start_mcp"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" 
-        >
-
-        <TableRow 
-            android:id="@+id/tableRow1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" 
-            >
-
-            <Button
-                android:id="@+id/button1"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:text="0" 
-                />
-
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:text="1" 
-                />
-        </TableRow>
-
-        <TableRow 
-            android:id="@+id/tableRow2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" 
-            >
-
-            <Button
-                android:id="@+id/button3"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="left|top"
-                android:text="1" />
-
-            <Button
-                android:id="@+id/button4"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="left|top"
-                android:text="0" />
-        </TableRow>
+        android:layout_height="wrap_content"
+        android:text="Start MCP" 
+		        
         
-            <TableRow 
-            android:id="@+id/tableRow2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" 
-            >
-
-            <Button
-                android:id="@+id/button3"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="left|top"
-                android:text="1" />
-
-            <Button
-                android:id="@+id/button4"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="left|top"
-                android:text="0" />
-        </TableRow>
+        />
     
-    </TableLayout>
-
 
 </LinearLayout>
